# haskell-modules

./: CHANGELOG.md  haskell-modules.cabal  hie.yaml
app/: Main.hs
src/: Geometry.hs  Person.hs
