cabal-version:      3.0
name:               haskell-modules
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-3.0-only
license-file:       LICENSE
author:             Gnu Doc
maintainer:         20248043+gnudoc@users.noreply.github.com
-- copyright:
category:           Text
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:          warnings
    exposed-modules:
        Geometry
      , Person
    build-depends:   base ^>=4.18.3.0
    hs-source-dirs:  src
    default-language: GHC2021

executable haskell-modules
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.18.3.0
      , haskell-modules
    hs-source-dirs:   app
    default-language: GHC2021
